--- a/iSocialize/GoogleService-Info.plist
+++ b/iSocialize/GoogleService-Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>API_KEY</key>
-	<string>AIzaSyCOYz0uKfUlWWrZEVDuUok3-g7o3k5Wg4k</string>
+	<string>API_KEY_HERE</string>
 	<key>GCM_SENDER_ID</key>
 	<string>466020333259</string>
 	<key>PLIST_VERSION</key>
@@ -15,15 +15,15 @@
 	<key>STORAGE_BUCKET</key>
 	<string>isocialize-62b10.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_APPINVITE_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_GCM_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:466020333259:ios:cdaa8c52d3c924fb72cd4e</string>
 </dict>
