--- a/iSocialize/GoogleService-Info.plist
+++ b/iSocialize/GoogleService-Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>API_KEY</key>
-	<string>API_KEY_HERE</string>
+	<string>YOUR_API_KEY_HERE</string>
 	<key>GCM_SENDER_ID</key>
 	<string>466020333259</string>
 	<key>PLIST_VERSION</key>
