--- a/iSocialize/GoogleService-Info.plist
+++ b/iSocialize/GoogleService-Info.plist
@@ -5,15 +5,15 @@
 	<key>API_KEY</key>
 	<string>YOUR_API_KEY_HERE</string>
 	<key>GCM_SENDER_ID</key>
-	<string>466020333259</string>
+	<string>GCM_ID_HERE</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.chailloleaudamien.iSocialize</string>
+	<string>BUNDLE_ID_HERE</string>
 	<key>PROJECT_ID</key>
-	<string>isocialize-62b10</string>
+	<string>PROJECT_ID_HERE</string>
 	<key>STORAGE_BUCKET</key>
-	<string>isocialize-62b10.appspot.com</string>
+	<string>STORAGE_BUCKET_HERE</string>
 	<key>IS_ADS_ENABLED</key>
 	<false/>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true/>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:466020333259:ios:cdaa8c52d3c924fb72cd4e</string>
+	<string>GOOGLE_APP_ID_HERE</string>
 </dict>
 </plist>
