--- a/iSocialize/GoogleService-Info.plist
+++ b/iSocialize/GoogleService-Info.plist
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true/>
 	<key>GOOGLE_APP_ID</key>
-	<string>GOOGLE_APP_ID_HERE</string>
+	<string>1:466020333259:ios:cdaa8c52d3c924fb72cd4e</string>
 </dict>
 </plist>
